--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,24 @@
+html {
+    font-family: Arial, sans-serif;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-}
-.navbar img {
-    height: 60px;
-    padding-left: 40%;
-    padding-right: 40%;
+    background-color: #f5f5f5;
 }
 
-h1, h2, h3, h4 {
-    color: #333;
-}
-
-h1 {
+.navbar {
     text-align: center;
-    margin: 20px 0;
+    padding: 10px;
 }
 
-h2 {
+.navbar img {
+    height: 100px;
+}
+
+h1, h2, h3 {
     text-align: center;
 }
 
@@ -28,18 +27,29 @@ form {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin: 20px;
+    margin: 20px auto;
+    max-width: 50%; /* Form genişliği */
+    width: 100%;
 }
 
-form h3 {
-    margin-top: 0;
+input{
+    width: calc(100% - 40px);
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
 
-input[type="text"],
-input[type="email"],
-input[type="password"],
-select {
-    width: calc(100% - 42px);
+.forgot-password{
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+
+select{
+    width: calc(100% - 20px);
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ddd;
@@ -47,146 +57,137 @@ select {
 }
 
 button {
-    background-color: #e30613;
-    color: white;
-    border: none;
-    padding: 10px 20px;
+    width: calc(100% - 15px);
+    border: 1px solid #ddd;
     border-radius: 4px;
+    height: 40px;
+    background-color: #e30613;
+    color: #fff;
     cursor: pointer;
-    font-size: 16px;
+    font-weight: bold;
 }
 
 button:hover {
     background-color: #ba0535;
 }
 
-select {
-    width: calc(100% - 22px);
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-
-p {
-    margin: 10px 0;
-}
-
-div {
-    padding: 20px;
-}
-
-.float-left {
-    float: left;
-    width: 45%;
-}
-
-.float-right {
-    float: right;
-    width: 50%;
-}
-
-.clearfix::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.representatives-leads-container {
-    float: right;
-    width: 48%;
-    padding: 20px;
-    margin-right: 20px;
-    box-sizing: border-box;
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    font-family: Arial, sans-serif;
-    max-height: 600px;
-    overflow-y: auto;
-}
-
-.representatives-leads-container h3 {
-    padding: 8px;
-    margin: 5px 0;
-    margin-top: 0;
-    padding-left: 34%;
-    color: #333;
-    font-size: 1.5em;
-}
-
-.representative {
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-}
-
-.representative h4 {
-    margin: 0;
-    color: #555;
-    font-size: 1.2em;
-}
-
-.lead {
-    padding: 8px;
-    margin: 5px 0;
-    background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 0.9em;
-    color: #666;
-}
-
-.lead:nth-child(even) {
-    background-color: #f1f1f1;
-}
-
 .container {
     display: flex;
     justify-content: space-between;
+    padding: 20px;
     flex-wrap: wrap;
-    gap: 20px;
 }
 
-.form-container,
-.list-container {
+.form-container, .lead-container {
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 10px;
     flex: 1;
     min-width: 300px;
 }
 
-.form-container {
-    width: 45%;
+/* Responsive Design */
+@media (max-width: 720px) {
+    .navbar img {
+        height: 50px;
+    }
+    .table-container {
+        overflow-x: auto;
+        width: 100%;
+    }
+    
+    table {
+        width: 60%!important;
+        border-collapse: collapse;
+    }
+    
+    th, td {
+        text-align: left;
+        padding: 10px;
+        white-space: nowrap; /* Hücre metinlerinin tek satıra sığmasını sağlar */
+    }
+    
+    .lead-container {
+        font-size: 10px;
+        width : 60%!important;
+    }
+    
 }
 
-.list-container {
-    width: 45%;
+.lead-container ul {
+    list-style-type: none;
+    padding: 0;
 }
-table {
-width: 100%;
-border-collapse: collapse;
-margin: 20px 0;
+
+.lead-container ul li {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
 }
 
 th, td {
-border: 1px solid #ddd;
-padding: 10px;
-text-align: left;
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: left;
 }
 
 th {
-background-color: #f4f4f4;
-color: #333;
+    background-color: #f4f4f4;
+    color: #333;
 }
 
 tr:nth-child(even) {
-background-color: #f9f9f9;
+    background-color: #f9f9f9;
 }
 
 tr:hover {
-background-color: #f1f1f1;
+    background-color: #f1f1f1;
 }
 
 td[colspan="3"] {
-font-weight: bold;
-background-color: #e9e9e9;
+    font-weight: bold;
+    background-color: #e9e9e9;
+}
+
+.save-button{
+    width: 50%;
+    margin-right: 25%;
+    margin-left: 25%;
+}
+.message {
+    color: red;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.page-header {
+    display: flex;
+    justify-content: center; /* Butonu sağa itiyor ve başlığı sola çekiyor */
+    align-items: center; /* Başlık ve butonu dikey olarak ortalıyor */
+    padding: 10px;
+}
+
+.page-header h2 {
+    padding-left: 150px!important;
+    margin: 0;
+    flex: 1; /* Başlığın boşluk kaplamasını sağlar */
+    text-align: center; /* Başlığı ortalar */
+}
+
+.page-header form {
+    margin-right: 25px; /* Formun etrafındaki boşluğu kaldırır */
+    width: 10%!important;
+    background-color: transparent; 
+}
+
+.page-header button {
+    background-color: #1b1b1b; /* Buton rengi */
+    color: #fff; /* Buton metin rengi */
+    border: none;
+    padding: 10px 10px;
+    cursor: pointer;
+}
+
+.page-header button:hover {
+    background-color: #333; /* Buton hover rengi */
 }
